name:                orchid
version:             0.1.0.0
synopsis:            Orchestria/CM DataMinder search expression translator
description:         Please see README.md
homepage:            https://github.com/mmakowski/orchid#readme
license:             BSD3
license-file:        LICENSE
author:              Maciek Makowski
maintainer:          maciek+orchid@mmakowski.com
copyright:           2017 Maciek Makowski
category:            Text
build-type:          Simple
extra-source-files:  README.md
                     src/Orchid/CADM/Lexer.x 
                     src/Orchid/CADM/Parser.y
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Orchid.CADM.Lexer
                     , Orchid.CADM.Parser
                     , Orchid.CADM.Syntax
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10 && < 1
                     , array >= 0.5 && < 1
                     , mtl >= 2.2 && < 3
  default-language:    Haskell2010

executable orchid-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , orchid
  default-language:    Haskell2010

test-suite orchid-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , orchid
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mmakowski/orchid
